--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -1,23 +1,93 @@
-
 .header {
-    background: linear-gradient(90deg, #EE82EE 0%, #7D00D4 34%, #9400FF 71%, #EE82EE 100%);
-    padding: 10px 20px;
-    font-size: 20px;
+  background: linear-gradient(
+    90deg,
+    #ee82ee 0%,
+    #7d00d4 34%,
+    #9400ff 71%,
+    #ee82ee 100%
+  );
+  padding: 10px 20px;
+  font-size: 20px;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-logo {
-    font-size: 26px;
-    color: white;
-    font-weight: bold;
+  font-size: 26px;
+  color: white;
+  font-weight: bold;
 }
 
-.nav-links ul{
-    display: flex;
-    gap: 20px;
+.nav-links ul {
+  display: flex;
+  gap: 20px;
 }
+
+/* Mobile menu toggle button */
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.hamburger span {
+  height: 3px;
+  width: 25px;
+  background-color: black;
+  margin: 4px;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    background-color: #7d00d4;
+    width: 25%;
+    height: 25%;
+  }
+  .nav-links ul {
+    display: block;
+    gap: 20px;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .nav-links ul li {
+    text-align: center;
+    margin: 20px 0;
+  }
+  
+}
+
+@media (max-width: 480px) {
+    .nav-links {
+      flex-direction: column;
+      position: absolute;
+      top: 70px;
+      right: 0;
+      background-color: #7d00d4;
+      width: 35%;
+      height: 35%;
+    }
+    .nav-links ul {
+      display: block;
+      gap: 20px;
+    }
+  
+    .hamburger {
+      display: flex;
+    }
+  
+    .nav-links ul li {
+      text-align: center;
+      margin: 20px 0;
+    }
+    
+  }
