--- a/src/components/HomePage/Home.css
+++ b/src/components/HomePage/Home.css
@@ -10,33 +10,27 @@
             #9400ff 71%,
             #ee82ee 100%);
     border-radius: 10px;
+    justify-content: center;
+  align-items: center;
 }
 
-.hero-content {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-}
-
-.hero-content h2 {
-    color: white;
-    font-size: 5rem;
-}
-
-@media (max-width: 768px) {
-    .hero-content h2 {
-        font-size: 3rem;
-    }
-
-    .hero-content {
-        top: 35%;
-    }
-
-}
-
-@media (max-width: 480px) {
-    .hero-content h2 {
-        font-size: 2.5rem;
-    }
-}
+.home-content-box {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 600px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .home-content-box h1 {
+    margin-bottom: 20px;
+    font-size: 28px;
+    color: #7d00d4;
+  }
+  
+  .home-content-box p {
+    font-size: 18px;
+    color: #333;
+  }
