--- a/src/components/ContactPage/Contact.css
+++ b/src/components/ContactPage/Contact.css
@@ -13,7 +13,7 @@
   }
   
   .content-box {
-    background: #fff;
+    background: #FFFFFFCC;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -57,3 +57,8 @@
     text-decoration: underline;
   }
   
+  @media (max-width: 768px) {
+    .contact-container .content-box {
+      width: 98%;
+    }
+  }
